--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,25 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    // Preferences DataStore (SharedPreferences like APIs)
+    dependencies {
+        implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+        // optional - RxJava2 support
+        implementation "androidx.datastore:datastore-preferences-rxjava2:1.0.0"
+
+        // optional - RxJava3 support
+        implementation "androidx.datastore:datastore-preferences-rxjava3:1.0.0"
+    }
+
+    // Alternatively - use the following artifact without an Android dependency.
+    dependencies {
+        implementation "androidx.datastore:datastore-preferences-core:1.0.0"
+    }
+
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
