--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,18 @@ dependencies {
         implementation "androidx.datastore:datastore-preferences-core:1.0.0"
     }
 
+    dependencies {
+        def lifecycle_version = "2.5.1"
+        def arch_version = "2.1.0"
+
+        // ViewModel
+        implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+        // ViewModel utilities for Compose
+        implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
+        // LiveData
+        implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    }
 
 
     testImplementation 'junit:junit:4.13.2'
