--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,18 @@
+
+buildscript {
+    ext.kotlin_version = '1.6.10'
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
